--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "csstype": "^3.1.0",
-    "history": "^5.3.0",
+    "framer-motion": "^7.5.2",
+    "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-dom": "^1.0.2",
@@ -19,8 +20,6 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.0.8",
-    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
@@ -54,7 +53,6 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "typescript": "^4.8.2"
   }
