--- a/package.json
+++ b/package.json
@@ -3,11 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.2.6",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.7",
-    "@mui/material": "^5.10.8",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -57,6 +53,7 @@
     "@types/node": "^18.7.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
     "typescript": "^4.8.2"
   }
